--- a/src/input.css
+++ b/src/input.css
@@ -83,6 +83,7 @@
   --color-idekabutton: #b58b75;
   --color-idekabuttonhover: #a87c60;
   --color-idekasecond: #eed6c8;
+  --color-idekadiscn: #f76c5e;
 }
 
 @layer base {
