--- a/public/output.css
+++ b/public/output.css
@@ -11,13 +11,11 @@
     --color-yellow-500: oklch(79.5% 0.184 86.047);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-300: oklch(87.2% 0.01 258.338);
-    --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-xs: 20rem;
     --container-sm: 24rem;
-    --container-4xl: 56rem;
     --container-5xl: 64rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
@@ -39,20 +37,23 @@
     --text-5xl--line-height: 1;
     --text-6xl: 3.75rem;
     --text-6xl--line-height: 1;
+    --text-7xl: 4.5rem;
+    --text-7xl--line-height: 1;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --leading-relaxed: 1.625;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
-    --radius-3xl: 1.5rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --font-poppins: "Poppins", sans-serif;
+    --font-pinyon: "Pinyon Script", cursive;
     --font-dmserif: "DM Serif Display", serif;
     --color-idekalina: #faf6f0;
     --color-idekatext: #53453c;
@@ -60,6 +61,7 @@
     --color-idekabuttonhover: #a87c60;
     --color-idekasecond: #eed6c8;
     --color-idekadiscn: #f76c5e;
+    --color-ideka01: #9f6e45;
   }
 }
 @layer base {
@@ -220,6 +222,9 @@
   .static {
     position: static;
   }
+  .inset-0 {
+    inset: calc(var(--spacing) * 0);
+  }
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
@@ -235,8 +240,20 @@
   .right-4 {
     right: calc(var(--spacing) * 4);
   }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
   .left-3 {
     left: calc(var(--spacing) * 3);
+  }
+  .z-10 {
+    z-index: 10;
+  }
+  .z-20 {
+    z-index: 20;
+  }
+  .z-40 {
+    z-index: 40;
   }
   .z-50 {
     z-index: 50;
@@ -246,14 +263,35 @@
   }
   .container {
     width: 100%;
+    @media (width >= 25rem) {
+      max-width: 25rem;
+    }
     @media (width >= 40rem) {
       max-width: 40rem;
+    }
+    @media (width >= 41.875rem) {
+      max-width: 41.875rem;
     }
     @media (width >= 48rem) {
       max-width: 48rem;
     }
+    @media (width >= 50rem) {
+      max-width: 50rem;
+    }
+    @media (width >= 55.625rem) {
+      max-width: 55.625rem;
+    }
+    @media (width >= 59.063rem) {
+      max-width: 59.063rem;
+    }
     @media (width >= 64rem) {
       max-width: 64rem;
+    }
+    @media (width >= 70rem) {
+      max-width: 70rem;
+    }
+    @media (width >= 75.625rem) {
+      max-width: 75.625rem;
     }
     @media (width >= 80rem) {
       max-width: 80rem;
@@ -273,6 +311,30 @@
   }
   .my-2 {
     margin-block: calc(var(--spacing) * 2);
+  }
+  .-mt-15 {
+    margin-top: calc(var(--spacing) * -15);
+  }
+  .-mt-25 {
+    margin-top: calc(var(--spacing) * -25);
+  }
+  .-mt-33 {
+    margin-top: calc(var(--spacing) * -33);
+  }
+  .-mt-45 {
+    margin-top: calc(var(--spacing) * -45);
+  }
+  .-mt-100 {
+    margin-top: calc(var(--spacing) * -100);
+  }
+  .-mt-105 {
+    margin-top: calc(var(--spacing) * -105);
+  }
+  .-mt-115 {
+    margin-top: calc(var(--spacing) * -115);
+  }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
   }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
@@ -322,6 +384,12 @@
   .mb-20 {
     margin-bottom: calc(var(--spacing) * 20);
   }
+  .mb-25 {
+    margin-bottom: calc(var(--spacing) * 25);
+  }
+  .mb-50 {
+    margin-bottom: calc(var(--spacing) * 50);
+  }
   .ml-1 {
     margin-left: calc(var(--spacing) * 1);
   }
@@ -345,6 +413,12 @@
   }
   .inline-flex {
     display: inline-flex;
+  }
+  .table {
+    display: table;
+  }
+  .h-1 {
+    height: calc(var(--spacing) * 1);
   }
   .h-1\/10 {
     height: calc(1/10 * 100%);
@@ -376,8 +450,17 @@
   .h-auto {
     height: auto;
   }
+  .min-h-screen {
+    min-height: 100vh;
+  }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/10 {
     width: calc(1/10 * 100%);
+  }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
   }
   .w-3\/4 {
     width: calc(3/4 * 100%);
@@ -388,8 +471,17 @@
   .w-9 {
     width: calc(var(--spacing) * 9);
   }
+  .w-10 {
+    width: calc(var(--spacing) * 10);
+  }
   .w-10\/12 {
     width: calc(10/12 * 100%);
+  }
+  .w-11 {
+    width: calc(var(--spacing) * 11);
+  }
+  .w-11\/12 {
+    width: calc(11/12 * 100%);
   }
   .w-13 {
     width: calc(var(--spacing) * 13);
@@ -406,6 +498,9 @@
   .w-70 {
     width: calc(var(--spacing) * 70);
   }
+  .w-90 {
+    width: calc(var(--spacing) * 90);
+  }
   .w-\[1\.25rem\] {
     width: 1.25rem;
   }
@@ -418,17 +513,35 @@
   .w-max {
     width: max-content;
   }
+  .max-w-3 {
+    max-width: calc(var(--spacing) * 3);
+  }
   .max-w-3\/4 {
     max-width: calc(3/4 * 100%);
   }
   .max-w-86 {
     max-width: calc(var(--spacing) * 86);
   }
+  .max-w-full {
+    max-width: 100%;
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
   .origin-bottom-left {
     transform-origin: bottom left;
   }
   .origin-top-left {
     transform-origin: top left;
+  }
+  .rotate-180 {
+    rotate: 180deg;
+  }
+  .transform {
+    transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
+  }
+  .resize {
+    resize: both;
   }
   .scroll-mt-10 {
     scroll-margin-top: calc(var(--spacing) * 10);
@@ -477,6 +590,13 @@
   }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
+  }
+  .space-y-1 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 1) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 1) * calc(1 - var(--tw-space-y-reverse)));
+    }
   }
   .space-y-3 {
     :where(& > :not(:last-child)) {
@@ -570,6 +690,9 @@
   .bg-idekasecond {
     background-color: var(--color-idekasecond);
   }
+  .bg-idekatext {
+    background-color: var(--color-idekatext);
+  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -578,6 +701,24 @@
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-white) 30%, transparent);
     }
+  }
+  .bg-\[url\(\'\/img\/bg\.png\'\)\] {
+    background-image: url('/img/bg.png');
+  }
+  .bg-\[url\(\'\/img\/bg2\.png\'\)\] {
+    background-image: url('/img/bg2.png');
+  }
+  .bg-\[url\(\'img\/01\/bg\.png\'\)\] {
+    background-image: url('img/01/bg.png');
+  }
+  .bg-cover {
+    background-size: cover;
+  }
+  .bg-center {
+    background-position: center;
+  }
+  .bg-no-repeat {
+    background-repeat: no-repeat;
   }
   .object-cover {
     object-fit: cover;
@@ -606,8 +747,20 @@
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
   }
+  .px-9 {
+    padding-inline: calc(var(--spacing) * 9);
+  }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
+  }
+  .px-12 {
+    padding-inline: calc(var(--spacing) * 12);
+  }
+  .px-14 {
+    padding-inline: calc(var(--spacing) * 14);
+  }
+  .px-20 {
+    padding-inline: calc(var(--spacing) * 20);
   }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
@@ -660,11 +813,17 @@
   .pt-23 {
     padding-top: calc(var(--spacing) * 23);
   }
+  .pt-28 {
+    padding-top: calc(var(--spacing) * 28);
+  }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
   }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
+  }
+  .pb-5 {
+    padding-bottom: calc(var(--spacing) * 5);
   }
   .pb-28 {
     padding-bottom: calc(var(--spacing) * 28);
@@ -680,6 +839,9 @@
   }
   .font-dmserif {
     font-family: var(--font-dmserif);
+  }
+  .font-pinyon {
+    font-family: var(--font-pinyon);
   }
   .font-poppins {
     font-family: var(--font-poppins);
@@ -699,6 +861,14 @@
   .text-5xl {
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
+  .text-6xl {
+    font-size: var(--text-6xl);
+    line-height: var(--tw-leading, var(--text-6xl--line-height));
+  }
+  .text-7xl {
+    font-size: var(--text-7xl);
+    line-height: var(--tw-leading, var(--text-7xl--line-height));
   }
   .text-base {
     font-size: var(--text-base);
@@ -720,6 +890,9 @@
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
+  .text-\[10px\] {
+    font-size: 10px;
+  }
   .text-\[14px\] {
     font-size: 14px;
   }
@@ -730,6 +903,10 @@
   .leading-6 {
     --tw-leading: calc(var(--spacing) * 6);
     line-height: calc(var(--spacing) * 6);
+  }
+  .leading-relaxed {
+    --tw-leading: var(--leading-relaxed);
+    line-height: var(--leading-relaxed);
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -745,6 +922,9 @@
   }
   .text-gray-500 {
     color: var(--color-gray-500);
+  }
+  .text-ideka01 {
+    color: var(--color-ideka01);
   }
   .text-idekabutton {
     color: var(--color-idekabutton);
@@ -764,8 +944,14 @@
   .text-yellow-500 {
     color: var(--color-yellow-500);
   }
+  .uppercase {
+    text-transform: uppercase;
+  }
   .line-through {
     text-decoration-line: line-through;
+  }
+  .underline {
+    text-decoration-line: underline;
   }
   .shadow-xl\/20 {
     --tw-shadow-alpha: 20%;
@@ -787,6 +973,18 @@
   .shadow-sm {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-xl {
+    --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
+  .backdrop-filter {
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
@@ -838,6 +1036,13 @@
     &:hover {
       @media (hover: hover) {
         border-color: var(--color-idekabutton);
+      }
+    }
+  }
+  .hover\:bg-\[\#7a502a\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #7a502a;
       }
     }
   }
@@ -903,6 +1108,26 @@
       max-width: var(--container-sm);
     }
   }
+  .xs\:-mt-25 {
+    @media (width >= 25rem) {
+      margin-top: calc(var(--spacing) * -25);
+    }
+  }
+  .xs\:-mt-60 {
+    @media (width >= 25rem) {
+      margin-top: calc(var(--spacing) * -60);
+    }
+  }
+  .sm\:-mt-20 {
+    @media (width >= 40rem) {
+      margin-top: calc(var(--spacing) * -20);
+    }
+  }
+  .sm\:-mt-79 {
+    @media (width >= 40rem) {
+      margin-top: calc(var(--spacing) * -79);
+    }
+  }
   .sm\:ml-10 {
     @media (width >= 40rem) {
       margin-left: calc(var(--spacing) * 10);
@@ -911,6 +1136,11 @@
   .sm\:w-4\/5 {
     @media (width >= 40rem) {
       width: calc(4/5 * 100%);
+    }
+  }
+  .sm\:w-80 {
+    @media (width >= 40rem) {
+      width: calc(var(--spacing) * 80);
     }
   }
   .sm\:max-w-full {
@@ -976,6 +1206,11 @@
       font-size: 16px;
     }
   }
+  .xm\:-mt-35 {
+    @media (width >= 41.875rem) {
+      margin-top: calc(var(--spacing) * -35);
+    }
+  }
   .md\:mx-0 {
     @media (width >= 48rem) {
       margin-inline: calc(var(--spacing) * 0);
@@ -984,6 +1219,16 @@
   .md\:mx-10 {
     @media (width >= 48rem) {
       margin-inline: calc(var(--spacing) * 10);
+    }
+  }
+  .md\:-mt-30 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * -30);
+    }
+  }
+  .md\:-mt-90 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * -90);
     }
   }
   .md\:mb-0 {
@@ -1157,6 +1402,26 @@
       line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
+  .\31 xl\:-mt-45 {
+    @media (width >= 50rem) {
+      margin-top: calc(var(--spacing) * -45);
+    }
+  }
+  .xxl\:-mt-100 {
+    @media (width >= 55.625rem) {
+      margin-top: calc(var(--spacing) * -100);
+    }
+  }
+  .\33 xl\:-mt-50 {
+    @media (width >= 59.063rem) {
+      margin-top: calc(var(--spacing) * -50);
+    }
+  }
+  .\33 xl\:-mt-110 {
+    @media (width >= 59.063rem) {
+      margin-top: calc(var(--spacing) * -110);
+    }
+  }
   .lg\:absolute {
     @media (width >= 64rem) {
       position: absolute;
@@ -1190,14 +1455,35 @@
   .lg\:container {
     @media (width >= 64rem) {
       width: 100%;
+      @media (width >= 25rem) {
+        max-width: 25rem;
+      }
       @media (width >= 40rem) {
         max-width: 40rem;
+      }
+      @media (width >= 41.875rem) {
+        max-width: 41.875rem;
       }
       @media (width >= 48rem) {
         max-width: 48rem;
       }
+      @media (width >= 50rem) {
+        max-width: 50rem;
+      }
+      @media (width >= 55.625rem) {
+        max-width: 55.625rem;
+      }
+      @media (width >= 59.063rem) {
+        max-width: 59.063rem;
+      }
       @media (width >= 64rem) {
         max-width: 64rem;
+      }
+      @media (width >= 70rem) {
+        max-width: 70rem;
+      }
+      @media (width >= 75.625rem) {
+        max-width: 75.625rem;
       }
       @media (width >= 80rem) {
         max-width: 80rem;
@@ -1215,6 +1501,16 @@
   .lg\:mx-auto {
     @media (width >= 64rem) {
       margin-inline: auto;
+    }
+  }
+  .lg\:-mt-60 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * -60);
+    }
+  }
+  .lg\:-mt-115 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * -115);
     }
   }
   .lg\:mt-0 {
@@ -1472,6 +1768,21 @@
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
+  .xx\:-mt-70 {
+    @media (width >= 70rem) {
+      margin-top: calc(var(--spacing) * -70);
+    }
+  }
+  .xx\:-mt-120 {
+    @media (width >= 70rem) {
+      margin-top: calc(var(--spacing) * -120);
+    }
+  }
+  .\32 xx\:-mt-138 {
+    @media (width >= 75.625rem) {
+      margin-top: calc(var(--spacing) * -138);
+    }
+  }
   .xl\:left-50 {
     @media (width >= 80rem) {
       left: calc(var(--spacing) * 50);
@@ -1480,6 +1791,16 @@
   .xl\:mx-0 {
     @media (width >= 80rem) {
       margin-inline: calc(var(--spacing) * 0);
+    }
+  }
+  .xl\:-mt-90 {
+    @media (width >= 80rem) {
+      margin-top: calc(var(--spacing) * -90);
+    }
+  }
+  .xl\:-mt-128 {
+    @media (width >= 80rem) {
+      margin-top: calc(var(--spacing) * -128);
     }
   }
   .xl\:ml-70 {
@@ -1644,6 +1965,15 @@
   ---tw-text-opacity: 1;
   color: rgb(83 69 60 / var(--tw-text-opacity));
 }
+.fade-up {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 2s ease, transform 2s ease;
+}
+.fade-up.show {
+  opacity: 1;
+  transform: translateY(0);
+}
 @layer base {
   ::-webkit-scrollbar {
     width: 8px;
@@ -1656,6 +1986,26 @@
   ::-webkit-scrollbar-thumb:hover {
     background-color: var(--color-idekabutton);
   }
+}
+@property --tw-rotate-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-y {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-z {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-y {
+  syntax: "*";
+  inherits: false;
 }
 @property --tw-space-y-reverse {
   syntax: "*";
@@ -1745,6 +2095,47 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-backdrop-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-sepia {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-duration {
   syntax: "*";
   inherits: false;
@@ -1771,6 +2162,11 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-rotate-x: initial;
+      --tw-rotate-y: initial;
+      --tw-rotate-z: initial;
+      --tw-skew-x: initial;
+      --tw-skew-y: initial;
       --tw-space-y-reverse: 0;
       --tw-space-x-reverse: 0;
       --tw-border-style: solid;
@@ -1790,6 +2186,16 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
+      --tw-backdrop-blur: initial;
+      --tw-backdrop-brightness: initial;
+      --tw-backdrop-contrast: initial;
+      --tw-backdrop-grayscale: initial;
+      --tw-backdrop-hue-rotate: initial;
+      --tw-backdrop-invert: initial;
+      --tw-backdrop-opacity: initial;
+      --tw-backdrop-saturate: initial;
+      --tw-backdrop-sepia: initial;
       --tw-duration: initial;
       --tw-ease: initial;
       --tw-scale-x: 1;
